# ctr-plugin

./: .gitignore  .gitmodules  3gx.ld  CMakeLists.txt  README.md  build  ctr-plugin.3gx  settings.plgInfo
include/: mk7structs.h  types.h
include/helpers/: QuickMenu.h
src/: disp.cpp  disp.h  font.h  main.cpp  plugin.cpp  plugin.h  struct.h  util.cpp  util.h
